[package]
name = "xmas-elf"
version = "0.6.2"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Library for parsing and navigating ELF data; zero-allocation, type-safe."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nrc/xmas-elf"
keywords = ["elf", "parser", "binary"]
exclude = ["test-data/*"]

[dependencies]
zero = { version = "0.1.3", git = "https://github.com/kevinaboos/zero.git" }

[lib]
name = "xmas_elf"

[[bin]]
path = "src/bin/main.rs"
name = "xmas_elf"
doc = false
